# kra-reconciliation-api1

./: # KRA Reconciliation API — Implementatio.md  .dockerignore  .env.example  .gitignore  Directory.txt  Dockerfile  alembic.ini  check_db.py  check_gulf.py  check_gulf_reconcile.py  create_admin.py  docker-compose.yml  docker-entrypoint.sh  fix_db_flags.py  implementation_plan.md  implementation_plan2.md  nginx.conf  notes.md  plan.md  plan2.md  plan3.md  pyproject.toml  task.md  test.db  test_auth.db  test_export_db.db  test_fuzzy.py  test_gulf.py  test_normalization_standalone.py  test_purchases_db.db  test_recon_db.db  test_reconcile_flags.py  test_reconciliation_unit.py  test_sales_db.db  test_sap_mapping_db.db  test_settings_db.db  test_settings_redesign_db.db  test_temp.db  test_templates_db.db
alembic/: env.py
app/: init_db.py  main.py
data/: SEC_B_WITH_VAT_PIN1.CSV  SEC_F_WITH_VAT_PIN1.CSV  SEC_G_WITH_VAT_PIN1.CSV  SEC_H_WITH_VAT_PIN1.CSV  SEC_I_WITH_VAT_PIN1.CSV  payload.json
deploy/: docker-compose.yml
docs/: auth_docs.md  reconciliation_engine.md  sap_integration.md  session_store_kra_csv.md  system_architecture_testing.md
frontend/: Dockerfile  next.config.ts  package-lock.json  tsconfig.tsbuildinfo
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scratch/: check_doc_entries.py  check_invoices_db.py  find_wachira_sap.py  list_all_doc_nums.py  query_live_sap_1470_1474.py  query_live_sap_1470_1474_clean.py
test/: test_auth.py  test_auth_legacy.py
tests/: conftest.py  test_auth.py  test_export.py  (+13 more)
(+173 files in other folders)
